--- a/src/data/locales/Indonesian-id_ID.json
+++ b/src/data/locales/Indonesian-id_ID.json
@@ -9,7 +9,9 @@
     "comments": "Komentar",
     "menu": "Menu",
     "grouping": "Atur Berdasarkan Referensi",
-    "select_locale": "Pilih lokal"
+    "select_locale": "Pilih lokal",
+    "open_translation_words": "Open Translation Words Checking",
+    "open_translation_notes": "Open Translation Notes Checking"
   },
   "buttons": {
     "ok_button": "Oke",
