--- a/src/data/locales/Naga Pidgin-nag_IN.json
+++ b/src/data/locales/Naga Pidgin-nag_IN.json
@@ -9,7 +9,9 @@
     "comments": "Mantabya",
     "menu": "Menu",
     "grouping": "Organize by Reference",
-    "select_locale": "Select Locale"
+    "select_locale": "Select Locale",
+    "open_translation_words": "Open Translation Words Checking",
+    "open_translation_notes": "Open Translation Notes Checking"
   },
   "buttons": {
     "ok_button": "Ok",
