--- a/src/data/locales/Odia-or_IN.json
+++ b/src/data/locales/Odia-or_IN.json
@@ -9,7 +9,9 @@
     "comments": "ମନ୍ତବ୍ୟଗୁଡିକ",
     "menu": "ମେନ୍ୟୁ",
     "grouping": "Organize by Reference",
-    "select_locale": "Select Locale"
+    "select_locale": "Select Locale",
+    "open_translation_words": "Open Translation Words Checking",
+    "open_translation_notes": "Open Translation Notes Checking"
   },
   "buttons": {
     "ok_button": "ଠିକ୍ ଅଛି",
