--- a/src/data/locales/Russian-ru_RU.json
+++ b/src/data/locales/Russian-ru_RU.json
@@ -9,7 +9,9 @@
     "comments": "Комментарии",
     "menu": "Меню",
     "grouping": "Организовать по ссылке",
-    "select_locale": "Выберите язык"
+    "select_locale": "Выберите язык",
+    "open_translation_words": "Open Translation Words Checking",
+    "open_translation_notes": "Open Translation Notes Checking"
   },
   "buttons": {
     "ok_button": "OK",
