--- a/src/data/locales/Ukrainian-uk_UA.json
+++ b/src/data/locales/Ukrainian-uk_UA.json
@@ -9,7 +9,9 @@
     "comments": "Коментарі",
     "menu": "Меню",
     "grouping": "Упорядкувати за посиланням",
-    "select_locale": "Оберіть мову"
+    "select_locale": "Оберіть мову",
+    "open_translation_words": "Open Translation Words Checking",
+    "open_translation_notes": "Open Translation Notes Checking"
   },
   "buttons": {
     "ok_button": "Добре",
