--- a/src/data/locales/Bengali, India-bn_IN.json
+++ b/src/data/locales/Bengali, India-bn_IN.json
@@ -9,7 +9,9 @@
     "comments": "মন্তব্য সমূহ ",
     "menu": "মেনু ",
     "grouping": "Organize by Reference",
-    "select_locale": "Select Locale"
+    "select_locale": "Select Locale",
+    "open_translation_words": "Open Translation Words Checking",
+    "open_translation_notes": "Open Translation Notes Checking"
   },
   "buttons": {
     "ok_button": "ওকে করুন ",
