--- a/src/data/locales/Hindi-hi_IN.json
+++ b/src/data/locales/Hindi-hi_IN.json
@@ -9,7 +9,9 @@
     "comments": "टिप्पणियाँ",
     "menu": "मेन्यू",
     "grouping": "Organize by Reference",
-    "select_locale": "नया देश सफलतापूर्वक जोड़ा गया है।"
+    "select_locale": "नया देश सफलतापूर्वक जोड़ा गया है।",
+    "open_translation_words": "Open Translation Words Checking",
+    "open_translation_notes": "Open Translation Notes Checking"
   },
   "buttons": {
     "ok_button": "ठीक",
