--- a/src/data/locales/Malayalam-ml_IN.json
+++ b/src/data/locales/Malayalam-ml_IN.json
@@ -9,7 +9,9 @@
     "comments": "അഭിപ്രായങ്ങൾ",
     "menu": "പട്ടിക",
     "grouping": "Organize by Reference",
-    "select_locale": "Select Locale"
+    "select_locale": "Select Locale",
+    "open_translation_words": "Open Translation Words Checking",
+    "open_translation_notes": "Open Translation Notes Checking"
   },
   "buttons": {
     "ok_button": "ഓക്കേ",
