--- a/src/data/locales/Nepali-ne_NP.json
+++ b/src/data/locales/Nepali-ne_NP.json
@@ -9,7 +9,9 @@
     "comments": "Comments",
     "menu": "सुची",
     "grouping": "Organize by Reference",
-    "select_locale": "लोकेली चयन गर्नुहोस्"
+    "select_locale": "लोकेली चयन गर्नुहोस्",
+    "open_translation_words": "Open Translation Words Checking",
+    "open_translation_notes": "Open Translation Notes Checking"
   },
   "buttons": {
     "ok_button": "ठीक",
