--- a/src/data/locales/Telugu-te_IN.json
+++ b/src/data/locales/Telugu-te_IN.json
@@ -9,7 +9,9 @@
     "comments": "వ్యాఖ్యలు",
     "menu": "సమాచారం",
     "grouping": "Organize by Reference",
-    "select_locale": "లొకేల్ ఎంచుకోండి"
+    "select_locale": "లొకేల్ ఎంచుకోండి",
+    "open_translation_words": "Open Translation Words Checking",
+    "open_translation_notes": "Open Translation Notes Checking"
   },
   "buttons": {
     "ok_button": "సరే",
